# pi-coding-agent

./: AGENTS.md  README.md  check-env.ps1  config.json  context.md  package-lock.json  package.json  pi-start.bat  pi-start.ps1  pi.bat  setup_trading.ps1  setup_trading.sh  setup_tradingagents.bat  setup_tradingagents.ps1
%USERPROFILE%/.pi/agent/extensions/pi-memory/: .env  .env.example  README.md  SKILL.md  TODO.md  init_db.py  l1-redis.ts  l2-postgres.ts  memory.ts  package-lock.json  package.json  pyproject.toml  run_example.bat  shared.ts
%USERPROFILE%/.pi/agent/extensions/pi-memory/pgvector/.deps/: bitutils.Po  halfvec.Po  hnsw.Po  hnswinsert.Po  hnswscan.Po  ivfbuild.Po  ivfkmeans.Po  ivfscan.Po  sparsevec.Po
%USERPROFILE%/.pi/agent/extensions/pi-memory/src/pi_memory/: __init__.py  l25_curated.py
%USERPROFILE%/.pi/agent/extensions/pi-memory/src/pi_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pi-btw/: package-lock.json
pi-code-runner/: README.md  SKILL.md  index.ts  package.json  pyproject.toml  runner.ts
pi-code-runner/src/extensions/: __init__.py  agent.py  memory_manager.py
pi-debugger/: SKILL.md  debugger.ts  index.ts  package.json
pi-deploy/: SKILL.md  deploy.ts  index.ts  package.json
pi-memory/: .env  .env.example  QUICK_START.md  README.md  START.bat  TODO.md  auto-save.ts  compressor.ts  docker-compose.yml  init_db.py  (+12 more)
promptflow/: .gitignore  QUICK_START.md  README.md  TEST_CASES_README.md  TEST_GUIDE.md  TEST_TELECOM_EXTREME.md  TEST_TELECOM_FULL_DIALOGUE.md  TEST_TELECOM_TAGS.md  analyze_and_fix.py  check_excel.py  check_excel_cols.py  cli_run.py  compare_and_fix.py  debug_excel.py  debug_ids.py  debug_read.py  final_test.py  full_analyze.py  full_optimize.py  full_test_and_optimize.py  pyproject.toml  quick_test.py  run.bat  run_all.py  run_complete_test.py  run_flow_test.bat  run_now.py  run_optimize.py  run_real_data_test.py  run_test.bat  run_tests.py  sample_prompt.md  setup.py  show_file.py  simple_test.py  test_all.py  test_flow.py  test_report.html  test_report.md  test_report_20260411_122136.html  (+10 more)
promptflow/data/: README.md  个性标签.md
promptflow/data/真实对话/: 对话记录.xlsx  问题.txt
promptflow/data/话术数据/: 【Agent话术提示词导出】112471_信贷-甜橙信审-公众引流（流式）-翼支付-流程优化-202603_2026_04_15_09_55_15.md
promptflow/examples/: customer_service.md  telecom_flow_optimized.md  telecom_tags.md  telecom_tags_optimized.md  usage.py
promptflow/reports/: ANALYSIS_REPORT.txt  COMPLETE_TEST_REPORT_20260415_133855.html  COMPLETE_TEST_REPORT_20260415_134045.html  COMPLETE_TEST_REPORT_20260415_134107.html  COMPLETE_TEST_REPORT_20260415_134244.html  COMPLETE_TEST_REPORT_20260415_135657.html  COMPLETE_TEST_REPORT_20260415_140537.html  TEST_REPORT_20260415_133234.md  完整分析报告.md  问题分析报告.md  问题对比分析.md  问题对比分析完整报告.md
promptflow/scripts/: README.md
promptflow/src/promptflow/: __init__.py  __main__.py  cli.py  flow_builder.py  parser.py  path_analyzer.py  result_analyzer.py  scenario_runner.py  tags.py  test_generator.py
promptflow/tests/: TEST_GENERATION_REPORT.md  __init__.py  conftest.py  test_and_optimize.py  test_cli.py  test_customer_service_flow.py  test_flow_builder.py  test_integration.py  test_parser.py  test_path_analyzer.py  test_promptflow.py  test_result_analyzer.py  test_scenario_runner.py  test_tags.py  test_telecom_full_dialogue.py  test_telecom_tags.py  test_telecom_tags_extreme.py  test_test_generator.py
(+107 files in other folders)
