[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-code-runner"
version = "1.0.0"
description = "代码运行器 + MemoryManager + Agent扩展"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "redis>=4.5.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
