[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-memory"
version = "1.0.0"
description = "三层记忆系统 - L1 Working, L2 Episodic, L3 Semantic"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pi Team"}
]
keywords = ["memory", "ai", "redis", "postgresql", "pinecone"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "redis>=4.5.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pinecone = ["pinecone-client>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]
all = [
    "pinecone-client>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/pi-team/pi-memory"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
